<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.FitWindowsLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
            android:id="@+id/scroll_view"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <!-- SDK Version -->
            <TextView
                    android:id="@+id/sdk_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/system_ui_title"
                    tools:text="Android 9 - API 29"/>

            <!-- System UI Dashboard -->
            <TextView
                    android:id="@+id/system_ui_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_ui_title"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sdk_version"
                    app:layout_constraintBottom_toTopOf="@id/system_ui_flag_container"/>

            <LinearLayout
                    android:id="@+id/system_ui_flag_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/system_ui_title"/>

            <Button
                    android:id="@+id/system_ui_set"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/set"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/system_ui_reset"
                    app:layout_constraintTop_toBottomOf="@id/system_ui_flag_container"
                    app:layout_constraintBottom_toTopOf="@id/window_manager_title"/>

            <Button
                    android:id="@+id/system_ui_reset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    app:layout_constraintLeft_toRightOf="@id/system_ui_set"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/system_ui_flag_container"/>

            <!-- Window Manager Dashboard -->
            <TextView
                    android:id="@+id/window_manager_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/window_manager_title"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/system_ui_set"
                    app:layout_constraintBottom_toTopOf="@id/window_manager_flag_container"/>

            <LinearLayout
                    android:id="@+id/window_manager_flag_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/window_manager_title"/>

            <Button
                    android:id="@+id/window_manager_set"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/set"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/window_manager_reset"
                    app:layout_constraintTop_toBottomOf="@id/window_manager_flag_container"
                    app:layout_constraintBottom_toTopOf="@id/space"/>

            <Button
                    android:id="@+id/window_manager_reset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    app:layout_constraintLeft_toRightOf="@id/window_manager_set"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/window_manager_flag_container"/>

            <Space
                    android:id="@+id/space"
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    app:layout_constraintTop_toBottomOf="@id/window_manager_set"
                    app:layout_constraintBottom_toTopOf="@id/fits_system_windows"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            <Switch
                    android:id="@+id/fits_system_windows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fits_system_windows_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/space"
                    app:layout_constraintBottom_toTopOf="@id/request_layout"/>

            <Button
                    android:id="@+id/request_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/request_layout_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fits_system_windows"
                    app:layout_constraintBottom_toTopOf="@id/status_bar_color"/>

            <Button
                    android:id="@+id/status_bar_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_bar_color_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/request_layout"
                    app:layout_constraintBottom_toTopOf="@id/navigation_bar_color"/>

            <Button
                    android:id="@+id/navigation_bar_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/navigation_bar_color_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/status_bar_color"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.appcompat.widget.FitWindowsLinearLayout>